manifests/sharenote/sharenote.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sharenote
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharenote
  namespace: sharenote
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: sharenote
  template:
    metadata:
      labels:
        app: sharenote
    spec:
      volumes:
        - name: sharenote
          persistentVolumeClaim:
            claimName: sharenote
      containers:
      - name: sharenote
        image: ghcr.io/thexyno/sharenote-py
        imagePullPolicy: Always
        volumeMounts:
          - name: sharenote
            mountPath: /sharenote-py/static
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: sharenote
  namespace: sharenote
spec:
  selector:
    app: sharenote
  ports:
  - name: http
    port: 8086
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sharenote
  namespace: sharenote
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
  labels:
    name: sharenote
spec:
  ingressClassName: nginx
  tls:
    - secretName: sharenote-tls
      hosts:
        - notes.jank.engineer
  rules:
  - host: notes.jank.engineer
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sharenote
            port: 
              name: http
